--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+        integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
+            <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul>
 
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li><a class="nav-link" href="">Studio</a></li>
+                <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="address">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
 
             </ul>
 
@@ -32,41 +40,46 @@
 
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions
+        <section class="hero-section">
+            <h1 class="hero-tittle">Effective Solutions
                 for Your Business</h1>
 
-            <button type="button">Order Service</button>
+            <button type="button" class="hero-btn">Order Service</button>
         </section>
-        <section>
-            <h2>our advantages</h2>
-            <ul>
 
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+
+        <section class="advantages">
+            <h2 class="advantages-title">our advantages</h2>
+            <ul class="advantages-list">
+
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Strategy</h3>
+                    <p class="advantages-txt">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.</p>
                 </li>
 
 
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Punctuality</h3>
+                    <p class="advantages-txt">Bring the key message to the brand's audience for the best price within
+                        the shortest possible
                         time.</p>
                 </li>
 
 
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Diligence</h3>
+                    <p class="advantages-txt">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize
                         risk.
                     </p>
                 </li>
 
 
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
+                <li class="advantages-list-item">
+                    <h3 class="advantages-list-title">Technologies</h3>
+                    <p class="advantages-txt">Design practice focused on digital experiences. We bring forth a deep
+                        passion for
                         problem-solving.</p>
                 </li>
 
@@ -100,6 +113,41 @@
                     <img src="./images/daniel_wilson.jpg" alt="member4" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+        <section id="portfolio">
+            <h2>Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/portfolio/banking_app.jpg" alt="banking_app" width="360px" ;>
+                    <h3>Banking App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/cashless_payment.jpg" alt="cashless_payment" width="360px" ;>
+                    <h3>Cashless Payment</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/meditation_app.jpg" alt="meditation_app" width="360px" ;>
+                    <h3>Meditation App</h3>
+                    <p>App</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/taxi_service.jpg" alt="taxi_service" width="360px" ;>
+                    <h3>Taxi Service</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/screen_illustrations.jpg" alt="screen_illustrations" width="360px" ;>
+                    <h3>Screen Illustrations</h3>
+                    <p>Design</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio/online_courses.jpg" alt="online_courses" width="360px" ;>
+                    <h3>Online Courses</h3>
+                    <p>Marketing</p>
                 </li>
             </ul>
         </section>
