--- a/index.html
+++ b/index.html
@@ -91,71 +91,72 @@
 
 
         </section>
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-list-item">
                     <img src="./images/mark_guerrero.jpg" alt="member1" width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-sub-title">Mark Guerrero</h3>
+                    <p class="team-sub-title-text">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/tom_ford.jpg" alt="member2" width="264">
                     <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <p class="team-sub-title-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/camila_garcia.jpg" alt="member3" width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-sub-title">Camila Garcia</h3>
+                    <p class="team-sub-title-text">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list-item">
                     <img src="./images/daniel_wilson.jpg" alt="member4" width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-sub-title">Daniel Wilson</h3>
+                    <p class="team-sub-title-text">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section id="portfolio">
-            <h2>Our Portfolio</h2>
-            <ul>
-                <li>
-                    <img src="./images/portfolio/banking_app.jpg" alt="banking_app" width="360px" ;>
-                    <h3>Banking App</h3>
-                    <p>App</p>
+        <section class="portfolio" id="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <img src="./images/portfolio/banking_app.jpg" alt="banking_app" width="360">
+                    <h3 class="portfolio-sub-title">Banking App</h3>
+                    <p class="portfolio-sub-title-text">App</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/cashless_payment.jpg" alt="cashless_payment" width="360px" ;>
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-item">
+                    <img src="./images/portfolio/cashless_payment.jpg" alt="cashless_payment" width="360">
+                    <h3 class="portfolio-sub-title">Cashless Payment</h3>
+                    <p class="portfolio-sub-title-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/meditation_app.jpg" alt="meditation_app" width="360px" ;>
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                <li class="portfolio-item">
+                    <img src="./images/portfolio/meditation_app.jpg" alt="meditation_app" width="360">
+                    <h3 class="portfolio-sub-title">Meditation App</h3>
+                    <p class="portfolio-sub-title-text">App</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/taxi_service.jpg" alt="taxi_service" width="360px" ;>
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-item">
+                    <img src="./images/portfolio/taxi_service.jpg" alt="taxi_service" width="360">
+                    <h3 class="portfolio-sub-title">Taxi Service</h3>
+                    <p class="portfolio-sub-title-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/screen_illustrations.jpg" alt="screen_illustrations" width="360px" ;>
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                <li class="portfolio-item">
+                    <img src="./images/portfolio/screen_illustrations.jpg" alt="screen_illustrations" width="360">
+                    <h3 class="portfolio-sub-title">Screen Illustrations</h3>
+                    <p class="portfolio-sub-title-text">Design</p>
                 </li>
-                <li>
-                    <img src="./images/portfolio/online_courses.jpg" alt="online_courses" width="360px" ;>
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                <li class="portfolio-item">
+                    <img src="./images/portfolio/online_courses.jpg" alt="online_courses" width="360">
+                    <h3 class="portfolio-sub-title">Online Courses</h3>
+                    <p class="portfolio-sub-title-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.</p>
     </footer>
 </body>
 
