--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul>
 
-                <li><a class="nav-link" href="">Studio</a></li>
-                <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li><a class="nav-link" href="./index.html">Studio</a></li>
+                <li><a class="nav-link" href="./index.html">Portfolio</a></li>
                 <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
