--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
 
                 <li><a class="nav-link" href="./index.html">Studio</a></li>
-                <li><a class="nav-link" href="./index.html">Portfolio</a></li>
+                <li><a class="nav-link" href="">Portfolio</a></li>
                 <li><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
@@ -101,7 +101,7 @@
                 </li>
                 <li class="team-list-item">
                     <img src="./images/tom_ford.jpg" alt="member2" width="264">
-                    <h3>Tom Ford</h3>
+                    <h3 class="team-sub-title">Tom Ford</h3>
                     <p class="team-sub-title-text">Frontend Developer</p>
                 </li>
                 <li class="team-list-item">
